# TestItPrime

./: CMakeLists.txt  README.md  main.cpp  program_calc.cpp
include/: calc.h
src/: CMakeLists.txt  calc.cpp
test/: CMakeLists.txt  calc_test_calcRPN.cpp  calc_test_from_example.cpp  calc_test_getRPN.cpp
